# Aula3-2025

scheduler_examples/: CMakeLists.txt  RR.c  RR.h  mlfq.c  mlfq.h  ossim.c  queue.c  queue.h  run_apps.sh  run_apps2.sh  run_appsio.sh  run_appsio2.sh  sjf.c  sjf.h
